samples/_failures_safe/1761724291_0363c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30b0fec3.c: In function ‘main’:
./samples/SAFE/__tmp_30b0fec3.c:130:9: error: expected expression at end of input
  130 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_30b0fec3.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30b0fec3.c:130:9: error: expected declaration or statement at end of input
